--- a/inputs/tuna/tuna.yaml
+++ b/inputs/tuna/tuna.yaml
@@ -86,21 +86,25 @@ Tuna:
     discardingStrategy: No Discarding
     fishingStrategy:
       Purse Seiner Fishing Strategy:
+        dolphinSetActionLogisticMidpoint: 0.1
+        dolphinSetActionLogisticSteepness: 1.0
         dolphinSetDetectionProbability: 0.1
-        dolphinSetExponentialSteepnessCoefficient: 1.0E-4
         dolphinSetGeneratorLogisticMidpoint: 100000.0
         dolphinSetGeneratorLogisticSteepness: 1.0
         fadDeploymentActionDecayConstant: 1.0
         fadDeploymentActionLogisticMidpoint: 0.1
         fadDeploymentActionLogisticSteepness: 1.0
-        fadSetExponentialSteepnessCoefficient: 1.0E-4
+        fadSetActionLogisticMidpoint: 0.1
+        fadSetActionLogisticSteepness: 1.0
         movingThreshold: 0.1
+        nonAssociatedSetActionLogisticMidpoint: 0.1
+        nonAssociatedSetActionLogisticSteepness: 1.0
         nonAssociatedSetDetectionProbability: 0.1
-        nonAssociatedSetExponentialSteepnessCoefficient: 1.0E-4
         nonAssociatedSetGeneratorLogisticMidpoint: 100000.0
         nonAssociatedSetGeneratorLogisticSteepness: 1.0
+        opportunisticFadSetActionLogisticMidpoint: 0.1
+        opportunisticFadSetActionLogisticSteepness: 1.0
         opportunisticFadSetDetectionProbability: 0.1
-        opportunisticFadSetExponentialSteepnessCoefficient: 1.0E-4
         searchActionDecayConstant: 1.0
         searchActionLogisticMidpoint: 0.1
         searchActionLogisticSteepness: 1.0
