--- a/inputs/YAML Samples/components/DepartingStrategy.yaml
+++ b/inputs/YAML Samples/components/DepartingStrategy.yaml
@@ -77,5 +77,5 @@ Full-time Seasonal Retired Decorator:
   targetVariable: '100.0'
   variableName: TRIP_PROFITS_PER_HOUR
 -------
-Purse-Seine Gear Departing Strategy
+Purse Seiner Departing Strategy
 -------
