--- a/inputs/YAML Samples/components/FishingStrategy.yaml
+++ b/inputs/YAML Samples/components/FishingStrategy.yaml
@@ -23,25 +23,35 @@ WFS Logit Return:
   ratioCatchToFishHold: '4.37828'
   weekendDummy: '-0.24437'
 -------
-FAD Fishing Strategy:
-  fadDeploymentsCoefficient: '0.01'
-  fadDeploymentsProbabilityDecay: '0.01'
-  fadSetsProbabilityDecay: '0.01'
-  setsOnOtherFadsCoefficient: '0.01'
-  setsOnOwnFadsCoefficient: '0.01'
-  unassociatedSetsCoefficient: '1.0E-8'
-  unassociatedSetsProbabilityDecay: '0.01'
--------
-FAD Fishing Threshold Strategy:
-  fadDeploymentsCoefficient: '0.01'
-  fadDeploymentsProbabilityDecay: '0.01'
-  minFadValueInMoney: '100000.0'
-  setsOnOtherFadsCoefficient: '0.01'
-  unassociatedSetsCoefficient: '1.0E-8'
--------
 Maximum Days a Year Decorator:
   delegate:
     Fish Until Full:
       minimumPercentageFull: '1.0'
   maxNumberOfDaysOutPerYear: '240.0'
+-------
+Purse Seiner Fishing Strategy:
+  dolphinSetActionLogisticMidpoint: 0.1
+  dolphinSetActionLogisticSteepness: 1.0
+  dolphinSetDetectionProbability: 0.1
+  dolphinSetGeneratorLogisticMidpoint: 100000.0
+  dolphinSetGeneratorLogisticSteepness: 1.0
+  fadDeploymentActionDecayConstant: 1.0
+  fadDeploymentActionLogisticMidpoint: 0.1
+  fadDeploymentActionLogisticSteepness: 1.0
+  fadSetActionLogisticMidpoint: 0.1
+  fadSetActionLogisticSteepness: 1.0
+  movingThreshold: 0.1
+  nonAssociatedSetActionLogisticMidpoint: 0.1
+  nonAssociatedSetActionLogisticSteepness: 1.0
+  nonAssociatedSetDetectionProbability: 0.1
+  nonAssociatedSetGeneratorLogisticMidpoint: 100000.0
+  nonAssociatedSetGeneratorLogisticSteepness: 1.0
+  opportunisticFadSetActionLogisticMidpoint: 0.1
+  opportunisticFadSetActionLogisticSteepness: 1.0
+  opportunisticFadSetDetectionProbability: 0.1
+  searchActionDecayConstant: 1.0
+  searchActionLogisticMidpoint: 0.1
+  searchActionLogisticSteepness: 1.0
+  searchBonus: 0.1
+  setCompositionWeightsPath: inputs/tuna/set_compositions.csv
 -------
