--- a/inputs/YAML Samples/components/Gear.yaml
+++ b/inputs/YAML Samples/components/Gear.yaml
@@ -111,22 +111,35 @@ Hour Delay Gear:
       catchabilityPerHour: '0.01'
   hoursItTake: '12.0'
 -------
+Max Throughput Limit:
+  delegate:
+    Fixed Proportion:
+      catchabilityPerHour: '0.01'
+  maxThroughput: '400.0'
+-------
 Purse Seine Gear:
   actionSpecificRegulations:
   - Active FAD limits:
-      limits:
-      - {
-        }
-      - {
-        }
-      - {
-        }
-      - {
-        }
-  averageSetDurationInHours: '8.0219505805135'
+      limitClass1: 70
+      limitClass2: 70
+      limitClass3: 70
+      limitClass4: 120
+      limitClass5: 120
+      limitClass6a: 300
+      limitClass6b: 450
   biomassLostMonitor: null
+  decayRateOfDeploymentLocationValues: 0.01
+  decayRateOfDolphinSetLocationValues: 0.01
+  decayRateOfNonAssociatedSetLocationValues: 0.01
+  decayRateOfOpportunisticFadSetLocationValues: 0.01
+  dolphinSetObservers: !!set {
+    }
+  dolphinSetTimeSinceLastVisitLogisticMidpoint: 5.0
+  dolphinSetTimeSinceLastVisitLogisticSteepness: 1.0
   fadDeploymentObservers: !!set {
     }
+  fadDeploymentPctActiveFadsLimitLogisticMidpoint: 0.5
+  fadDeploymentPctActiveFadsLimitLogisticSteepness: 1.0
   fadInitializerFactory:
     attractionRates: {
       }
@@ -137,12 +150,18 @@ Purse Seine Gear:
   fadSetObservers: !!set {
     }
   initialNumberOfFads: 999999
-  minimumSetDurationInHours: '3.03333333333333'
-  setObservers: !!set {
+  locationValuesFile: inputs/tuna/location_values.csv
+  nonAssociatedSetObservers: !!set {
     }
-  stdDevOfSetDurationInHours: '2.99113291538723'
+  nonAssociatedSetTimeSinceLastVisitLogisticMidpoint: 5.0
+  nonAssociatedSetTimeSinceLastVisitLogisticSteepness: 1.0
+  opportunisticFadSetTimeSinceLastVisitLogisticMidpoint: 5.0
+  opportunisticFadSetTimeSinceLastVisitLogisticSteepness: 1.0
+  pctHoldSpaceLeftLogisticMidpoint: 0.9
+  pctHoldSpaceLeftLogisticSteepness: 1.7976931348623157E308
+  pctSetsRemainingLogisticMidpoint: 0.5
+  pctSetsRemainingLogisticSteepness: 1.0
+  pctTravelTimeLeftLogisticMidpoint: 0.9
+  pctTravelTimeLeftLogisticSteepness: 1.7976931348623157E308
   successfulSetProbability: '0.9231701'
-  unassociatedCatchSampleFile: null
-  unassociatedSetObservers: !!set {
-    }
 -------
